<resources>
    <string name="app_name">MET</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="greeting_early">Guten Morgen,\n%1$s.</string>
    <string name="greeting_noon">Hallo, %1$s.</string>
    <string name="greeting_late">Guten Abend,\n%1$s.</string>
    <string name="temperature">%1$s°C</string>

    <string name="lorem_ipsum">
        c consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="met">MET</string>
    <string name="overview">Übersicht</string>
    <string name="new_activity">Neue Aktivität</string>
    <string name="or">oder</string>
    <string name="choose_plan">Trainingsplan-Übersicht</string>
    <string name="create">Erstellen</string>
    <string name="activityCount">Anzahl: ${value} Aktivitäten</string>
    <string name="edit_plan">Trainingsplan bearbeiten</string>
    <string name="name">Name</string>
    <string name="date">Datum (DD.MM.YYYY)</string>
    <string name="addActivity">+ Aktivität Hinzufügen</string>
    <string name="deletePlan">Plan löschen</string>
    <string name="use">Anwenden</string>
    <string name="ready">Fertig</string>
    <string name="createNewActivity">Erstellen einer neuen Aktivität</string>
    <string name="sport">Sportart</string>
    <string name="intensity">Intensität</string>
    <string name="length">Dauer (in Minuten)</string>
    <string name="delete">- Löschen</string>
    <string name="plans">Trainingspläne</string>
    <string name="allActivities">Alle Aktivitäten</string>
    <string name="timePeriod">Zeitraum</string>
    <string name="reached">Erreicht: ${value}</string>
    <string name="stillToReach">Noch zu erreichen: ${value}</string>
    <string name="createUser">Erstelle dein Benutzer</string>
    <string name="birthday">Geburtsdatum (DD.MM.YYYY)</string>
    <string name="weight">Gewicht</string>
    <string name="activityCategorie">Aktivitätskategorie</string>
    <string name="changeUser">Ändere User</string>
    <string name="cancel">Abbrechen</string>
    <string name="save">Speichern</string>
    <string name="editActivity">Bearbeiten einer Aktivität</string>
    <string name="createNewPlan">Erstellen eines neuen Plans</string>
    <string name="noIntensivity">Keine Intensität</string>


    <string-array name="activityCategory">
        <item>ungenügend</item>
        <item>niedrig</item>
        <item>mittel</item>
        <item>hoch</item>
    </string-array>
</resources>