<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".UserCreationFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="100dp"
        android:text="@string/met"
        android:textAlignment="center"
        android:textSize="50sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/createUser"
        android:textAlignment="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_vertical"
        android:layout_margin="50dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/inputName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/name" />

        <EditText
            android:id="@+id/inputAge"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/birthday"
            android:inputType="date" />

        <EditText
            android:id="@+id/inputWeight"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/weight"
            android:inputType="numberDecimal" />

        <Spinner
            android:id="@+id/categoryChoice"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/activityCategorie" />

        <Button
            android:id="@+id/userCreationFinished"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/ready" />
    </LinearLayout>
</LinearLayout>