<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".NewDecisionFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="50dp"
        android:gravity="center">

        <Button
            android:id="@+id/addActivity"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:textSize="25sp"
            android:text="@string/new_activity" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="30sp"
            android:text="@string/or"
            android:layout_marginVertical="30dp"/>

        <Button
            android:id="@+id/showPlans"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:textSize="25sp"
            android:text="@string/plans" />
    </LinearLayout>
</FrameLayout>