<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".ChoosePlanFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="50dp"
        android:text="@string/met"
        android:textAlignment="center"
        android:textSize="50sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/choose_plan"
        android:textAlignment="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="fill_vertical"
        android:layout_margin="30dp"
        android:orientation="vertical">

        <ListView
            android:id="@+id/planListView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/createPlanButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20sp"
            android:text="@string/create" />


    </LinearLayout>
</LinearLayout>