<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ActivityOverviewFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="103dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:background="#00FFFFFF"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/met"
                android:textAlignment="textStart"
                android:textSize="50sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/overview" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/weatherIcon"
                android:layout_width="75dp"
                android:layout_height="75dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/temperatureTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/locationTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:textSize="20sp" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <ListView
        android:id="@+id/activityList"
        android:layout_width="match_parent"
        android:layout_height="479dp"
        android:layout_margin="20dp"
        android:layout_marginBottom="0dp" />

    <Button
        android:id="@+id/addActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:layout_marginTop="0dp"
        android:gravity="bottom"
        android:text="@string/new_activity" />


</LinearLayout>